--- a/suriya.html
+++ b/suriya.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Nadippin Nayagan</h1>
+    <p>he is the best actor among the tamil cineme</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, veniam!
+    </p>
 </body>
 </html>
